Fixed navbar visibilityt

--- a/app/static/css/style.scss.css
+++ b/app/static/css/style.scss.css
@@ -383,23 +383,20 @@ div[role="alert"] {
     justify-content: space-between;
     position: absolute;
     left: -999999px; }
-  .site-sidebar:hover,
-  .site-sidebar .active {
+  .site-sidebar:hover, .site-sidebar.active {
     height: 5rem; }
-    .site-sidebar:hover nav,
-    .site-sidebar .active nav {
+    .site-sidebar:hover nav, .site-sidebar.active nav {
       left: 0;
+      top: 0;
       position: relative; }
-      .site-sidebar:hover nav ol,
-      .site-sidebar .active nav ol {
+      .site-sidebar:hover nav ol, .site-sidebar.active nav ol {
         list-style-type: none;
         margin: 0;
         padding: 0;
         display: flex;
         align-content: flex-start;
         justify-content: flex-start; }
-        .site-sidebar:hover nav ol li,
-        .site-sidebar .active nav ol li {
+        .site-sidebar:hover nav ol li, .site-sidebar.active nav ol li {
           align-self: flex-start;
           align-self: flex-start;
           counter-increment: step-counter;
@@ -408,8 +405,7 @@ div[role="alert"] {
           line-height: 1;
           margin: 0;
           min-width: 8em; }
-          .site-sidebar:hover nav ol li a,
-          .site-sidebar .active nav ol li a {
+          .site-sidebar:hover nav ol li a, .site-sidebar.active nav ol li a {
             align-self: flex-start;
             border: none;
             color: #555;
@@ -419,8 +415,7 @@ div[role="alert"] {
             font-size: 1rem;
             line-height: 1rem;
             text-align: left; }
-            .site-sidebar:hover nav ol li a::before,
-            .site-sidebar .active nav ol li a::before {
+            .site-sidebar:hover nav ol li a::before, .site-sidebar.active nav ol li a::before {
               color: #aaa;
               content: counter(step-counter);
               display: block;
@@ -434,8 +429,7 @@ div[role="alert"] {
               min-height: 2rem;
               position: relative;
               top: 0.2rem; }
-            .site-sidebar:hover nav ol li a .site-sidebar nav ol li a::before,
-            .site-sidebar .active nav ol li a .site-sidebar nav ol li a::before {
+            .site-sidebar:hover nav ol li a .site-sidebar nav ol li a::before, .site-sidebar.active nav ol li a .site-sidebar nav ol li a::before {
               color: #aaa;
               content: counter(step-counter);
               display: inline-block;
@@ -447,16 +441,10 @@ div[role="alert"] {
               margin-top: .5rem;
               position: relative;
               top: 0; }
-            .site-sidebar:hover nav ol li a:hover, .site-sidebar:hover nav ol li a:focus, .site-sidebar:hover nav ol li a[aria-current],
-            .site-sidebar .active nav ol li a:hover,
-            .site-sidebar .active nav ol li a:focus,
-            .site-sidebar .active nav ol li a[aria-current] {
+            .site-sidebar:hover nav ol li a:hover, .site-sidebar:hover nav ol li a:focus, .site-sidebar:hover nav ol li a[aria-current], .site-sidebar.active nav ol li a:hover, .site-sidebar.active nav ol li a:focus, .site-sidebar.active nav ol li a[aria-current] {
               color: #000;
               text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25); }
-              .site-sidebar:hover nav ol li a:hover::before, .site-sidebar:hover nav ol li a:focus::before, .site-sidebar:hover nav ol li a[aria-current]::before,
-              .site-sidebar .active nav ol li a:hover::before,
-              .site-sidebar .active nav ol li a:focus::before,
-              .site-sidebar .active nav ol li a[aria-current]::before {
+              .site-sidebar:hover nav ol li a:hover::before, .site-sidebar:hover nav ol li a:focus::before, .site-sidebar:hover nav ol li a[aria-current]::before, .site-sidebar.active nav ol li a:hover::before, .site-sidebar.active nav ol li a:focus::before, .site-sidebar.active nav ol li a[aria-current]::before {
                 text-shadow: none;
                 color: #333; }
 
